<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_watched"
            android:icon="@drawable/ic_playlist_add_check_black_24dp"
            android:title="@string/menu_watched_list" />
        <item
            android:id="@+id/nav_watch"
            android:icon="@drawable/ic_watch_later_black_24dp"
            android:title="@string/menu_watch_list" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_phone_black_24dp"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_help" />
    </group>
</menu>
